# X-tools

./: .gitignore  README.md  build_exe.py  create_installer.py  download_sdk.py  inspect_dll.py  installer_gui.py  main.py  make_icon.py  pyproject.toml  test_scanner.py  test_uac_hosts.py  uninstall.spec  uninstall_gui.py  verify_env.py  x-tools-setup.spec  x-tools.spec
docs/plans/: 2026-03-01-logo-redesign-design.md  2026-03-01-macro-settings-design.md  2026-03-01-macro-settings-implementation.md
src/core/: app_scanner.py  clipboard_history.py  config.py  custom_launch.py  everything.py  hotkey_manager.py  json_compare.py  logger.py  metrics.py  plugin_base.py  plugin_manager.py  workflow_schema.py  workflow_steps_codec.py
src/platform/: __init__.py  applications.py  file_search.py  hosts.py  hotkeys.py  runtime.py  shell.py  single_instance.py  startup.py  windowing.py
src/plugins/: base64_tool.py  calculator.py  capture_history_tool.py  clipboard_tool.py  custom_launch_tool.py  hash_tool.py  hosts_tool.py  json_compare_tool.py  json_tool.py  qr_tool.py  system_cmds.py  timestamp.py  url_tool.py  uuid_tool.py  workflow_tool.py
src/ui/: capture_history_window.py  clipboard_window.py  hosts_window.py  json_compare_window.py  network_monitor.py  pinned_image_window.py  screenshot_overlay.py  search_window.py  settings_window.py
tests/core/: test_config_workflows.py  test_custom_launch.py  test_json_compare.py  test_platform_runtime.py  test_workflow_schema.py
tests/plugins/: test_workflow_plugin_chain.py
tests/ui/: test_network_monitor.py  (+3 more)
